--- a/MotoApp.csproj
+++ b/MotoApp.csproj
@@ -8,22 +8,27 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EntityFrameworkCore.InMemory.HierarchyId" Version="8.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.1" />
+    <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Services.NuGet.CredentialProvider" Version="0.37.0" />
-    <PackageReference Include="NuGet.CommandLine" Version="6.9.1">
+    <PackageReference Include="NuGet.CommandLine" Version="6.13.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="NuGet.Common" Version="6.9.1" />
-    <PackageReference Include="NuGet.Configuration" Version="6.9.1" />
-    <PackageReference Include="NuGet.Frameworks" Version="6.9.1" />
-    <PackageReference Include="NuGet.LibraryModel" Version="6.9.1" />
-    <PackageReference Include="NuGet.PackageManagement" Version="6.9.1" />
-    <PackageReference Include="NuGet.Packaging" Version="6.9.1" />
-    <PackageReference Include="NuGet.ProjectModel" Version="6.9.1" />
-    <PackageReference Include="NuGet.Protocol" Version="6.9.1" />
-    <PackageReference Include="NuGet.VisualStudio" Version="17.9.1" />
+    <PackageReference Include="NuGet.Common" Version="6.13.1" />
+    <PackageReference Include="NuGet.Configuration" Version="6.13.1" />
+    <PackageReference Include="NuGet.Frameworks" Version="6.13.1" />
+    <PackageReference Include="NuGet.LibraryModel" Version="6.13.1" />
+    <PackageReference Include="NuGet.PackageManagement" Version="6.13.1" />
+    <PackageReference Include="NuGet.Packaging" Version="6.13.1" />
+    <PackageReference Include="NuGet.ProjectModel" Version="6.13.1" />
+    <PackageReference Include="NuGet.Protocol" Version="6.13.1" />
+    <PackageReference Include="NuGet.VisualStudio" Version="17.13.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Resources\" />
   </ItemGroup>
 
 </Project>
